--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
     <div id="navbar">going TODAY</div>
     <div id="infoBox">
       <div id="infoTitle">오늘은</div>
-      <div id="infoContent">5월 22일</div>
+      <div id="infoContent">2020.5.22.</div>
     </div>
     <div id="search">
       <input id="search_input" placeholder="목적지를 입력해주세요" />
