--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,6 +23,7 @@
     </div>
     <div id="current">현재 위치</div>
     <div id="map" style="width:100%; height:100vh;"></div>
+    <!-- 외부에 있는 데이터(data.js)를 index.ejs 안에서 활용하겠다고 명시 -->
     <script type="text/javascript" src="/data/data.js"></script>
     <script>
     let mapOptions = {
@@ -45,7 +46,7 @@
       let latlng = new naver.maps.LatLng(target.lat, target.lng);
       marker = new naver.maps.Marker({
         map: map,
-        position: latlng,
+        position: latlng, // target했던 데이터들이 위치 형태로 담김
         icon : {
           content : "<div class='marker'></div>",
           anchor: new naver.maps.Point(12, 12)
@@ -55,7 +56,7 @@
       let content = `<div class='infowindow_wrap'>
         <div class='infowindow_title'>${target.title}</div>
         <div class='infowindow_content'>${target.content}</div>
-        <div class='infowindow_date'>${target.date}</div>
+        <div class='infowindow_time'>${target.time}</div>
       </div>`
 
       let infowindow = new naver.maps.InfoWindow({
